product service improvement done